[package]
name = "ticktick-cli"
version = "0.1.0"
edition = "2021"
description = "A fast, snappy TickTick CLI tool"
license = "MIT"

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
oauth2 = { version = "4.4", features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
webbrowser = "1.0"
tiny_http = "0.12"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
