[package]
name = "ticktick-cli"
version = "0.2.0"
edition = "2021"
description = "A fast, snappy TickTick CLI tool"
license = "MIT"
default-run = "tt"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
webbrowser = "1.0"
tiny_http = "0.12"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", features = ["windows-native"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3.6.2", features = ["linux-native"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
