[package]
name = "ticktick-auth-broker"
version = "0.1.0"
edition = "2021"
description = "Lightweight Cloudflare Worker auth broker for TickTick OAuth"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
worker = "0.7"
worker-macros = "0.7"
